--- a/barakholka/ads/templates/base.html
+++ b/barakholka/ads/templates/base.html
@@ -240,10 +240,32 @@
                 </form>
 
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'ads:ads_list' %}">
-                            <i class="bi bi-view-list"></i> Все объявления
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {% if user.is_authenticated %}
+                                Добро пожаловать, {{ user.username }}!
+                            {% else %}
+                                <i class="bi bi-person-circle"></i> Аккаунт
+                            {% endif %}
                         </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{% url 'ads:ads_list' %}"><i class="bi bi-view-list me-2"></i> Все объявления</a></li>
+                            {% if user.is_authenticated %}
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <form action="{% url 'user:logout' %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="dropdown-item text-danger">
+                                        <i class="bi bi-box-arrow-right me-2"></i> Выйти
+                                    </button>
+                                </form>
+                            </li>
+                            {% else %}
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'user:login' %}"><i class="bi bi-box-arrow-in-right me-2"></i> Войти</a></li>
+                            <li><a class="dropdown-item" href="{% url 'user:signup' %}"><i class="bi bi-person-plus me-2"></i> Зарегистрироваться</a></li>
+                            {% endif %}
+                        </ul>
                     </li>
 
 
